--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
 	<body>
 		<header>
 			<nav>
-				<ul>
-					<img
-						class="logoDev"
-						src="assets/images/Logo Dev.png"
-						alt=""
-					/>
-					<a class="batLogo" href="#profil"></a>
-					<a class="batLogo" href="#xp"></a>
-					<a class="batLogo" href="#outils"></a>
-					<a class="batLogo" href="#profile"></a>
+				<div class="toggleBtn">
+					<span></span>
+				</div>
+				<img class="menuItemn logoDev"src="assets/images/Logo Dev.png"alt=""/>
+				<ul class="menu">
+					<a class="menuItemn batLogo" href="#profil"></a>
+					<a class="menuItemn batLogo" href="#xp"></a>
+					<a class="menuItemn batLogo" href="#outils"></a>
+					<a class="menuItemn batLogo" href="#realisations"></a>
 				</ul>
 			</nav>
 			<div class="parcours">
@@ -44,30 +43,24 @@
 				<h2>Mon parcours :</h2>
 				<div>
 					<i class="fa-solid fa-utensils fa-2xl"></i>
-					<p>
-						Dix ans dans la restauration , patron pendant 3 ans. La
+					<p>Dix ans dans la restauration , patron pendant 3 ans. La
 						faillite de mon établissement m'a amené vers le dev et
-						cette nouvelle passion.
-					</p>
+						cette nouvelle passion.</p>
 				</div>
 				<div>
 					<i class="fa-solid fa-gamepad fa-2xl"></i>
-					<p>
-						Streamer à mes heures perdues , je maitrise le clavier
+					<p>Streamer à mes heures perdues , je maitrise le clavier
 						et clique plutôt rapidement.Cette passion du jeux vidéo
 						m'a permis de renconter des devs qui m'ont convaincu
 						d'avoir le courage d'entreprendre cette reconversion
-						professionnelle
-					</p>
+						professionnelle</p>
 				</div>
 				<div>
 					<i class="fa-solid fa-code fa-2xl"></i>
-					<p>
-						Aujourd'hui en formation de Dev web et web mobile depuis
+					<p>Aujourd'hui en formation de Dev web et web mobile depuis
 						fin septembre 2022. J'apprends un peu plus tout les
 						jours et aime ce milieu et cette milliers de
-						possibilitées pour arriver à un objectif.
-					</p>
+						possibilitées pour arriver à un objectif.</p>
 				</div>
 			</section>
 			<div class="laser"></div>
@@ -78,7 +71,7 @@
 					<p>HTML/CSS</p>
 				</div>
 				<div>
-					<i class="fa-regular fa-hand-point-up fa-2xl"></i>
+					<i class="fa-solid fa-hand-point-up fa-2xl"></i>
 					<p>Animation et interaction.</p>
 				</div>
 				<div>
@@ -92,10 +85,7 @@
 				<div class="languages">
 					<a href="https://www.w3schools.com/html/">HTML</a>
 					<a href="https://www.w3schools.com/html/">CSS</a>
-					<a
-						href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-						>JAVASCRIPT</a
-					>
+					<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JAVASCRIPT</a>
 					<a href="https://reactjs.org/">REACT</a>
 					<a href="https://en.wikipedia.org/wiki/API">API</a>
 					<a href="https://github.com/">GITHUB</a>
@@ -104,33 +94,43 @@
 				<div id="outilsCarousel">
 					<div class="owl-carousel">
 						<div>
-							<i
-								class="logo-carousel fa-brands fa-react fa-7x"
-							></i>
+							<i class="logo-carousel fa-brands fa-react fa-7x"></i>
 						</div>
 						<div>
 							<i class="logo-carousel fa-brands fa-js fa-7x"></i>
 						</div>
 						<div>
-							<i
-								class="logo-carousel fa-brands fa-sass fa-7x"
-							></i>
+							<i class="logo-carousel fa-brands fa-sass fa-7x"></i>
 						</div>
 						<div>
-							<i
-								class="logo-carousel fa-brands fa-html5 fa-7x"
-							></i>
+							<i class="logo-carousel fa-brands fa-html5 fa-7x"></i>
 						</div>
 						<div>
-							<i
-								class="logo-carousel fa-brands fa-css3-alt fa-7x"
-							></i>
+							<i class="logo-carousel fa-brands fa-css3-alt fa-7x"></i>
 						</div>
 						<div>
-							<i
-								class="logo-carousel fa-brands fa-github fa-7x"
-							></i>
+							<i class="logo-carousel fa-brands fa-github fa-7x"></i>
 						</div>
+					</div>
+				</div>
+			</section>
+			<div class="laser"></div>
+			<section id="realisations">
+				<h2>Mes réalisations :</h2>
+				<div id="showReal"></div>
+			</section>
+			<div class="laser"></div>
+			<section id="contact">
+				<h2>Mes contact : </h2>
+				<div class="contactDiv">
+					<div>
+						<p>Mail : </p>
+						<p>romaincardot24000@gmail.com</p>
+					</div>
+					<div>
+						<p>Trouve moi en ligne : </p>
+						<a href="https://github.com/"><i class="fa-brands fa-linkedin"></i></a>
+						<a href="https://www.linkedin.com/in/romain-cardot-791255253/"><i class="fa-brands fa-github"></i></a>
 					</div>
 				</div>
 			</section>
