--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<a class="menuItemn batLogo" href="#xp"></a>
 					<a class="menuItemn batLogo" href="#outils"></a>
 					<a class="menuItemn batLogo" href="#realisations"></a>
+					<a class="menuItemn batLogo" href="#contact"></a>
 				</ul>
 			</nav>
 			<div class="parcours">
@@ -129,8 +130,8 @@
 					</div>
 					<div>
 						<p>Trouve moi en ligne : </p>
-						<a href="https://github.com/"><i class="fa-brands fa-linkedin"></i></a>
-						<a href="https://www.linkedin.com/in/romain-cardot-791255253/"><i class="fa-brands fa-github"></i></a>
+						<a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+						<a href="https://www.linkedin.com/in/romain-cardot-791255253/"><i class="fa-brands fa-linkedin"></i></a>
 					</div>
 				</div>
 			</section>
